--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        sudo apt-get install libpulse-dev
+        sudo apt-get install libpulse-dev libasound2-dev
     - name: Build
       env:
         CC: ${{ matrix.compiler }}
