--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -51,7 +51,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get install libpulse-dev
+        sudo apt-get install libpulse-dev libasound2-dev
 
     - name: Build
       run: |
