update apt cache in build pipelines
currently GitHub builds break during 'sudo apt-get install'

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -51,6 +51,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install libpulse-dev libasound2-dev
 
     - name: Build
