--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
+        sudo apt-get update
         sudo apt-get install libpulse-dev libasound2-dev
     - name: Build and Test with coverage
       env:
