--- a/.github/workflows/code_coverage.yml
+++ b/.github/workflows/code_coverage.yml
@@ -29,6 +29,5 @@ jobs:
       - name: Process coverage
         run: |
           gcov build/*.o build/test/*.o
-      - name: Upload coverage
-        run: |
-          bash <( curl -s https://codecov.io/bash )
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
